Table in associated tags modal aligned correctly.

--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -595,7 +595,6 @@ $main-blue: #5383C3;
       tr {
         td,th {
           cursor: pointer;
-          padding: 8px 20px;
 
           &:last-child {
             width: 1px;
